--- a/templates/layout/layout.jinja
+++ b/templates/layout/layout.jinja
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{% csrf_token %}">
+    <link rel="stylesheet" href="{{ static('assets/css/bootstrap.min.css') }}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+    <!-- dynamically changing -->
+    <link rel="stylesheet" href="{{ static('assets/css/dashboard/dashboard.css') }}">
     <title></title>
 </head>
 <body>
     <div id="app">
-        {% block content %}
-        {% endblock %}
+        {% if not request.path == '/admin/login/' %}
+            {% include "layout/header.jinja" %}
+                {% block content %}
+                {% endblock %}
+        {% else %}
+            {% block content_login %}
+            {% endblock %}
+        {% endif %}
     </div>
     <script src="{{ static('js/main.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="{{ static('assets/js/dashboard/dashboard.js') }}"></script>
 </body>
 </html>
