--- a/templates/layout/sidebar.jinja
+++ b/templates/layout/sidebar.jinja
@@ -4,43 +4,43 @@
 >
     <div class="sidebar-sticky pt-3">
     <ul class="nav flex-column">
-        <li class="nav-item">
-        <a class="nav-link" href="/admin/dashboard">
+        <li class="custom-link nav-item {{ 'active-path' if '/admin/dashboard/' in request.path_info else '' }}">
+        <a class="nav-link" href="{{ url('dashboard:admin-dashboard') }}">
             <span data-feather="home"></span>
-            Dashboard <span class="sr-only"></span>
+            Dashboard
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="/admin/purchasing">
             <span data-feather="file"></span>
             Purchase Order
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="/admin/transaction">
             <span data-feather="list"></span>
             Sales Transaction
         </a>
         </li>
-        <li class="nav-item">
-        <a class="nav-link" href="/admin/products">
+        <li class="custom-link nav-item {{ 'active-path' if '/admin/product/' in request.path_info else '' }}">
+        <a class="nav-link" href="{{ url('product:admin-product') }}">
             <span data-feather="shopping-cart"></span>
             Products
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="/admin/customers">
             <span data-feather="users"></span>
             Customers
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="/admin/reports">
             <span data-feather="bar-chart-2"></span>
             Reports
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="/admin/settings">
             <span data-feather="settings"></span>
             Settings
@@ -61,25 +61,25 @@
         </a>
     </h6>
     <ul class="nav flex-column mb-2">
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="#">
             <span data-feather="file-text"></span>
             Current month
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="#">
             <span data-feather="file-text"></span>
             Last quarter
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="#">
             <span data-feather="file-text"></span>
             Social engagement
         </a>
         </li>
-        <li class="nav-item">
+        <li class="custom-link nav-item">
         <a class="nav-link" href="#">
             <span data-feather="file-text"></span>
             Year-end sale
