--- a/templates/layout/layout.jinja
+++ b/templates/layout/layout.jinja
@@ -7,9 +7,9 @@
     <meta name="csrf-token" content="{% csrf_token %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{{ static('assets/css/main.min.css') }}">
+    <link rel="stylesheet" href="{{ static('assets/css/custom.min.css') }}">
     <!-- dynamically changing -->
-    <link rel="stylesheet" href="{{ static('assets/css/dashboard.css') }}">
+    <link rel="stylesheet" href="{{ static('assets/css/dashboard.min.css') }}">
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <title></title>
 </head>
@@ -28,6 +28,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <script src="{{ static('assets/js/dashboard.js') }}"></script>
+    <script src="{{ static('assets/js/dashboard.min.js') }}"></script>
 </body>
 </html>
